// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resolveConfig gets default config 1`] = `
{
  "baseClassName": "",
  "baseDefaultProps": {
    "fill": "currentColor",
  },
  "baseName": undefined,
  "baseTemplate": [Function],
  "camelCaseProps": true,
  "defaultProps": {},
  "filenameTemplate": [Function],
  "indexTemplate": [Function],
  "name": "Icon",
  "svgoPlugins": [],
  "template": [Function],
}
`;

exports[`resolveConfig overwrites default config 1`] = `
{
  "baseClassName": "MyIcon",
  "baseDefaultProps": {
    "fill": "currentColor",
  },
  "baseName": undefined,
  "baseTemplate": [Function],
  "camelCaseProps": true,
  "defaultProps": {},
  "filenameTemplate": [Function],
  "indexTemplate": [Function],
  "name": "Icon",
  "svgoPlugins": [
    {
      "removeAttrs": {
        "attrs": "fill",
      },
    },
  ],
  "template": [Function],
}
`;
